import "AddCommand.proto";
import "BulkAddCommand.proto";
import "BulkGetCommand.proto";
import "BulkInsertCommand.proto";
import "BulkRemoveCommand.proto";
import "ClearCommand.proto";
import "ContainsCommand.proto";
import "CountCommand.proto";
import "DisposeCommand.proto";
import "GetCacheItemCommand.proto";
import "GetCommand.proto";
import "GetEnumeratorCommand.proto";
import "GetGroupCommand.proto";
import "GetHashmapCommand.proto";
import "GetOptimalServerCommand.proto";
import "GetThresholdSizeCommand.proto";
import "GetTypeInfoMapCommand.proto";
import "InitCommand.proto";
import "InsertCommand.proto";
import "RaiseCustomEventCommand.proto";
import "RegisterKeyNotifCommand.proto";
import "RegisterBulkKeyNotifCommand.proto";
import "RegisterNotifCommand.proto";
import "RemoveCommand.proto";
import "RemoveGroupCommand.proto";
import "SearchCommand.proto";
import "GetTagCommand.proto";
import "LockCommand.proto";
import "IsLockedCommand.proto";
import "LockVerifyCommand.proto";
import "UnlockCommand.proto";
import "UnRegisterKeyNotifCommand.proto";
import "UnRegisterBulkKeyNotifCommand.proto";
import "GetLoggingInfoCommand.proto";

import "GetKeysByTagCommand.proto";
import "BulkDeleteCommand.proto";
import "DeleteCommand.proto";
import "GetNextChunkCommand.proto";
import "GetGroupNextChunkCommand.proto";
import "AddAttributeCommand.proto";
import "GetLCCommand.proto";
import "GetRunningServersCommand.proto";
import "SyncEventsCommand.proto";
import "GetCacheBindingCommand.proto";
import "DeleteQueryCommand.proto";
import "GetProductVersionCommand.proto";
import "RemoveByTagCommand.proto";
import "InvokeEntryProcessorCommand.proto";
import "MapReduceTaskCommand.proto";
import "TaskCallbackCommand.proto";
import "TaskCancelCommand.proto";
import "GetRunningTasksCommand.proto";
import "TaskProgressCommand.proto";
import "GetNextRecordCommand.proto";
import "GetTaskEnumeratorCommand.proto";
import "GetCacheConfigurationCommand.proto";

option java_outer_classname="CommandProtocol";

package com.alachisoft.tayzgrid.common.protobuf;

message Command 
{
	enum Type 
	{
		ADD = 1;
	    ADD_BULK = 2;
		GET_BULK = 3;
		INSERT_BULK = 4;
		REMOVE_BULK = 5;
		CLEAR = 6;
		CONTAINS = 7;
		COUNT = 8;
		DISPOSE = 9;
		GET_CACHE_ITEM = 10;
		GET = 11;
		GET_ENUMERATOR = 12;
		GET_GROUP = 13;
		GET_HASHMAP = 14;
		GET_OPTIMAL_SERVER = 15;
		GET_THRESHOLD_SIZE = 16;
		GET_TYPEINFO_MAP = 17;
		INIT = 18;
		INSERT = 19;
		RAISE_CUSTOM_EVENT = 20;
		REGISTER_KEY_NOTIF = 21;
		REGISTER_NOTIF = 22;
		REMOVE = 23;
		REMOVE_GROUP = 24;
		SEARCH = 25;
		GET_TAG = 26;
		LOCK = 27;
		UNLOCK = 28;
		ISLOCKED = 29;
		LOCK_VERIFY = 30;
		UNREGISTER_KEY_NOTIF = 31;	
		UNREGISTER_BULK_KEY_NOTIF = 32;	
		REGISTER_BULK_KEY_NOTIF = 33;
		GET_LOGGING_INFO = 34;
		REMOVE_BY_TAG = 35;
		GET_KEYS_TAG = 36;
		DELETE_BULK = 37;
		DELETE = 38;
		GET_NEXT_CHUNK = 39;
		GET_GROUP_NEXT_CHUNK = 40;
		ADD_ATTRIBUTE = 41;
		GET_LC_DATA = 42;
		GET_RUNNING_SERVERS = 43;
		SYNC_EVENTS = 44;
		GET_CACHE_BINDING = 45;
		DELETEQUERY = 46;
		GET_PRODUCT_VERSION = 47;
		INVOKE_ENTRYPROCESSOR = 48;
		MAP_REDUCE_TASK = 49;
		MAP_REDUCE_TASK_CALLBACK = 50;
		MAP_REDUCE_TASK_CANCEL = 51;
		GET_RUNNING_TASKS = 52;
		TASK_PROGRESS = 53;
		GET_NEXT_RECORD = 54;
		GET_TASK_ENUMERATOR = 55;
		GET_CACHE_CONFIG = 56;
	}
	
	optional Type type = 1;
	optional string version = 2;
	optional AddCommand addCommand = 3;
	optional BulkAddCommand bulkAddCommand = 4;
	optional BulkGetCommand bulkGetCommand = 5;
	optional BulkInsertCommand bulkInsertCommand = 6;
	optional BulkRemoveCommand bulkRemoveCommand = 7;
	optional ClearCommand clearCommand = 8;
	optional ContainsCommand containsCommand = 9;
	optional CountCommand countCommand = 10;
	optional DisposeCommand disposeCommand = 11;
	optional GetCacheItemCommand getCacheItemCommand = 12;
	optional GetCommand getCommand = 13;
	optional GetEnumeratorCommand getEnumeratorCommand = 14;
	optional GetGroupCommand getGroupCommand = 15;
	optional GetHashmapCommand getHashmapCommand = 16;
	optional GetOptimalServerCommand getOptimalServerCommand = 17;
	optional GetThresholdSizeCommand getThresholdSizeCommand = 18;
	optional GetTypeInfoMapCommand getTypeInfoMapCommand = 19;
	optional InitCommand initCommand = 20;
	optional InsertCommand insertCommand = 21;
	optional RaiseCustomEventCommand raiseCustomEventCommand = 22;
	optional RegisterKeyNotifCommand registerKeyNotifCommand= 23;
	optional RegisterNotifCommand registerNotifCommand = 24;
	optional RemoveCommand removeCommand = 25;
	optional RemoveGroupCommand removeGroupCommand = 26;
	optional SearchCommand searchCommand = 27;
	optional GetTagCommand getTagCommand = 28;
	optional LockCommand lockCommand = 29;
	optional UnlockCommand unlockCommand = 30;
	optional IsLockedCommand isLockedCommand = 31;
	optional LockVerifyCommand lockVerifyCommand = 32;
	optional UnRegisterKeyNotifCommand unRegisterKeyNotifCommand = 33;
	optional UnRegisterBulkKeyNotifCommand unRegisterBulkKeyNotifCommand = 34;
	optional RegisterBulkKeyNotifCommand registerBulkKeyNotifCommand = 35;
	optional GetLoggingInfoCommand getLoggingInfoCommand = 39;
	optional int64 requestID = 40;
	optional int32 commandVersion = 41 [default=0];
	optional RemoveByTagCommand removeByTagCommand = 42;
	optional GetKeysByTagCommand getKeysByTagCommand = 43;
	optional int64 clientLastViewId = 44 [default=-1];
	optional BulkDeleteCommand bulkDeleteCommand = 45;
	optional DeleteCommand deleteCommand = 46;
	optional string intendedRecipient = 47 [default = ""];
	optional GetNextChunkCommand getNextChunkCommand = 48;
	optional GetGroupNextChunkCommand getGroupNextChunkCommand = 49;
	optional AddAttributeCommand addAttributeCommand = 50;
	optional GetLCCommand getLCDataCommand = 51;
	optional GetRunningServersCommand getRunningServersCommand = 52;
	optional SyncEventsCommand syncEventsCommand = 53;
	optional GetCacheBindingCommand getCacheBindingCommand = 54;
	optional DeleteQueryCommand deleteQueryCommand = 55;
	optional GetProductVersionCommand getProductVersionCommand = 56;
	optional InvokeEntryProcessorCommand invokeEntryProcessorCommand=57;			
	optional MapReduceTaskCommand mapReduceTaskCommand = 58;
	optional TaskCallbackCommand taskCallbackCommand = 59;
	optional TaskCancelCommand taskCancelCommand = 60;
	optional GetRunningTasksCommand getRunningTasksCommand = 61;
	optional TaskProgressCommand taskProgressCommand = 62;
	optional GetNextRecordCommand getNextRecordCommand = 63;
	optional GetTaskEnumeratorCommand getTaskEnumeratorCommand = 64;
	optional GetCacheConfigurationCommand getCacheConfigurationCommand = 65;

}